syntax = "proto3";

package trade;

service Trades {
    // AopF2F 商家扫用户付款码
    rpc AopF2F(Request) returns (Response) {}
    rpc Query(Request) returns (Response) {}
    rpc Refund(Request) returns (Response) {} // 退款接口
    rpc RefundQuery(Request) returns (Response) {} // 退款查询接口
}
// 请求参数
message BizContent {
    string channel = 1;         // 通道名称                必选接口[] [支付宝、微信、银联等] 
    string auth_code = 2;       // 付款码                 必选接口[AopF2F]                              280528574232947539
    string title = 3;           // 订单标题               必选接口[AopF2F]                              测试商品名称
    string out_trade_no = 4;    // 订单编号               必选接口[AopF2F、Query、Refund、RefundQuery]   GZ2020010117534314525  
    string out_refund_no = 5;   // 退款订单编号            必选接口[Refund、RefundQuery]   GZ2020010117534314525  
    int64 total_fee = 6;        // 订单总金额 [单位分]     必选接口[AopF2F]                              180=1.8元 
    int64 refund_fee = 7;       // 退款金额 [单位分]       必选接口[Refund]                              180=1.8元
    string operator_id = 8;     // 商户操作员编号          必选接口[]                                    1004  
    string terminal_id = 9;     // 商户机具终端编号        必选接口[]                                    6008      
    string attach = 10;          // 附加数据 [数据格式json] 必选接口[]                                    {data:data}    
}
// 公共请求参数
message Request { 
    string store_id = 1;        // 门店ID                 必选      0e896e91-1666-4fc4-8f30-e178f8a424e4 
    BizContent biz_content = 3; // 请求内容                必选
}
// 退款订单
message Refund {
    string out_trade_no = 1;            // 订单编号         必选接口[Refund、RefundQuery]     GZ2020010117534314525
    string total_fee = 2;               // 订单金额 [单位分] 必选接口[Refund、RefundQuery]     180=1.8元
    string status = 3   ;                  // 订单状态         必选接口[Refund、RefundQuery]     SUCCESS成功、CLOSED关闭、USERPAYING等待用户付款、WAITING系统繁忙稍后查询
}
// 响应参数
message Content {
    string return_code = 1;             // 业务结果         必选接口[AopF2F、Query、Refund、RefundQuery]     SUCCESS/FAIL
    string return_msg = 2;              // 返回消息         必选接口[AopF2F、Query、Refund、RefundQuery]     支付失败
    string channel = 3;                 // 通道内容         必选接口[AopF2F、Query、Refund、RefundQuery]     wechat
    string out_trade_no = 4;            // 订单编号         必选接口[AopF2F、Query、Refund、RefundQuery]     GZ2020010117534314525
    string out_refund_no = 5;           // 退款订单编号      必选接口[Refund、RefundQuery]                   GZ2020010117534314525
    string trade_no = 6;                // 渠道交易编号      必选接口[AopF2F、Query、Refund、RefundQuery]     2013112011001004330000121536
    int64 total_fee = 7;                // 订单金额 [单位分] 必选接口[AopF2F、Query、Refund、RefundQuery]     180=1.8元
    int64 refund_fee = 8;               // 退款金额 [单位分] 必选接口[Refund、RefundQuery]                   180=1.8元
    string status = 9;                  // 订单状态         必选接口[AopF2F、Query、Refund、RefundQuery]     SUCCESS成功、CLOSED关闭、USERPAYING等待用户付款、WAITING系统繁忙稍后查询
    string time_end = 10;                // 订单完成时间      必选接口[AopF2F、Query、Refund、RefundQuery]     SUCCESS成功、CLOSED关闭、USERPAYING等待用户付款、WAITING系统繁忙稍后查询
    string content = 11;                // 通道返回原始内容   必选接口[AopF2F、Query、Refund、RefundQuery] 
    string wechat_open_id = 12;         // 微信openid       必选接口[]                                      oUpF8uN95-Pteags6E_roPHg7AG
    string wechat_is_subscribe = 13;    // 是否微信关注公众号 必选接口[]                                      Y/N
    string alipay_buyer_logon_id = 14;  // 支付宝账号        必选接口[]                                     158****1562
    string alipay_buyer_user_id = 15;   // 支付宝用户id      必选接口[]                                     2088101117955611
    repeated Refund refund_list = 16;   // 退款订单明细       必选接口[Refund、RefundQuery]  
}
// 公共响应参数
message Response {
    string sign = 1;            // 签名 [计算content得到的秘钥签名]           必选
    Content content = 2;        // 响应参数合计                             必选
}   
